Fix new tag button alignment and hide color picker after picking color

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -68,6 +68,7 @@
 
       &--new {
         width: 100%;
+        padding: 0.25rem;
       }
 
       &--submit {
